--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,19 @@
 	path = mg-agroquimicos
 	url = git@git.vauxoo.com:vauxoo/mg-agroquimicos.git
 	branch = 14.0
+[submodule "l10n-mx-payroll"]
+	path = l10n-mx-payroll
+	url = git@git.vauxoo.com:vauxoo/l10n-mx-payroll.git
+	branch = 14.0
+[submodule "hr-advanced"]
+	path = hr-advanced
+	url = git@git.vauxoo.com:vauxoo/hr-advanced.git
+	branch = 14.0
+[submodule "server-tools"]
+	path = server-tools
+	url = git@github.com:Vauxoo/server-tools.git
+	branch = 14.0
+[submodule "hr"]
+	path = hr
+	url = git@github.com:Vauxoo/hr.git
+	branch = 14.0
